--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -32,11 +32,11 @@ jobs:
               run: python -m venv venv
 
             - name: Enter Python virtual environment (ubuntu)
-              if: ${{ matrix.os }} == "ubuntu-latest"
+              if: matrix.os == "ubuntu-latest"
               run: source venv/bin/activate
 
             - name: Enter Python virtual environment (windows)
-              if: ${{ matrix.os }} == "windows-latest"
+              if: matrix.os == "windows-latest"
               run: .\venv\bin\activate.ps1
 
             - name: Install dependencies
