build: convert build system to libcommon/template-repo-py

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,6 @@
+# Build container Dockerfile
+build-support/docker/Dockerfile
+
 # Compiled Python files
 **/*__pycache__
 
@@ -9,9 +12,11 @@
 **/.mypy_cache
 
 # Python virtual environment
-build-support/python/virtualenvs
 **/*venv
 
 # Vim swap files
 **/*.swp
 **/*.swo
+
+# YouCompleteMe config file
+.ycm_extra_conf.py
