--- a/.pylintrc
+++ b/.pylintrc
@@ -1,12 +1,13 @@
 [MASTER]
 
-# Add files or directories matching the regex patterns to the blacklist. The
-# regex matches against base names, not paths.
-ignore-patterns=__pycache__
+# Add files or directories matching the regex patterns to the blacklist.
+# The regex matches against base names, not paths.
+ignore-patterns=
+    __pycache__,
 
-# Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
-# number of processors available to use.
-jobs=1
+# Use multiple processes to speed up Pylint.
+# Specifying 0 will auto-detect the number of processors available to use.
+jobs=0
 
 # Pickle collected data for later comparisons.
 persistent=yes
@@ -15,15 +16,16 @@ persistent=yes
 # user-friendly hints instead of false-positive error messages.
 suggestion-mode=yes
 
-# Allow loading of arbitrary C extensions. Extensions are imported into the
-# active Python interpreter and may run arbitrary code.
+# Allow loading of arbitrary C extensions.
+# Extensions are imported into the active Python interpreter and may run arbitrary code.
 unsafe-load-any-extension=no
 
 
 [MESSAGES CONTROL]
 
-# Only show warnings with the listed confidence levels. Leave empty to show
-# all. Valid levels: HIGH, INFERENCE, INFERENCE_FAILURE, UNDEFINED.
+# Only show warnings with the listed confidence levels.
+# Leave empty to show all.
+# Valid levels: HIGH, INFERENCE, INFERENCE_FAILURE, UNDEFINED.
 confidence=
 
 # Disable the message, report, category or checker with the given id(s). You
@@ -35,14 +37,10 @@ confidence=
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use "--disable=all --enable=classes
 # --disable=W".
-disable=C0102,
-    C0111,
-    C0330,
-    W0142,
-    W0201,
-    W0212,
-    W0703,
-    W1202
+disable=C0104,  # Disallowed names
+    C0114,  # Missing module docstring (see: C0111)
+    R0801,  # Duplicate code, false positives on overriden functions
+    W0511   # TODO messages
 
 
 [REPORTS]
@@ -54,10 +52,10 @@ disable=C0102,
 # (RP0004).
 evaluation=10.0 - ((float(5 * error + warning + refactor + convention) / statement) * 10)
 
-# Set the output format. Available formats are text, parseable, colorized, json
-# and msvs (visual studio). You can also give a reporter class, e.g.
-# mypackage.mymodule.MyReporterClass.
-output-format=text
+# Set the output format.
+# Available formats are text, parseable, colorized, json and msvs (visual studio).
+# You can also give a reporter class, e.g. mypackage.mymodule.MyReporterClass.
+output-format=colorized
 
 # Tells whether to display a full report or only the messages.
 reports=no
@@ -68,20 +66,20 @@ score=yes
 
 [REFACTORING]
 
-# Maximum number of nested blocks for function / method body
+# Maximum number of nested blocks for function / method body.
 max-nested-blocks=5
 
-# Complete name of functions that never returns. When checking for
-# inconsistent-return-statements if a never returning function is called then
-# it will be considered as an explicit return statement and no message will be
-# printed.
-never-returning-functions=sys.exit
+# Complete name of functions that never returns.
+# When checking for inconsistent-return-statements if a never returning function is called then
+# it will be considered as an explicit return statement and no message will be printed.
+never-returning-functions=
+    sys.exit,
 
 
 [LOGGING]
 
-# Format style used to check logging format string. `old` means using %
-# formatting, while `new` is for `{}` formatting.
+# Format style used to check logging format string.
+# `old` means using % formatting, while `new` is for `{}` formatting.
 logging-format-style=old
 
 # Logging modules to check that the string format arguments are in logging
@@ -92,10 +90,10 @@ logging-modules=logging
 [SPELLING]
 
 # Limits count of emitted suggestions for spelling mistakes.
-max-spelling-suggestions=4
+max-spelling-suggestions=5
 
-# Spelling dictionary name. Available dictionaries: none. To make it working
-# install python-enchant package..
+# Spelling dictionary name.
+# To make it working install python-enchant package.
 spelling-dict=
 
 # List of comma separated words that should not be checked.
@@ -112,26 +110,26 @@ spelling-store-unknown-words=no
 [MISCELLANEOUS]
 
 # List of note tags to take in consideration, separated by a comma.
-notes=TODO
+notes=
+    TODO,
 
 
 [TYPECHECK]
 
-# List of decorators that produce context managers, such as
-# contextlib.contextmanager. Add to this list to register other decorators that
-# produce valid context managers.
+# List of decorators that produce context managers, such as contextlib.contextmanager.
+# Add to this list to register other decorators that produce valid context managers.
 contextmanager-decorators=contextlib.contextmanager
 
-# Tells whether missing members accessed in mixin class should be ignored. A
-# mixin class is detected if its name ends with "mixin" (case insensitive).
+# Tells whether missing members accessed in mixin class should be ignored.
+# A mixin class is detected if its name ends with "mixin" (case insensitive).
 ignore-mixin-members=yes
 
 # Tells whether to warn about missing members when the owner of the attribute
 # is inferred to be None.
 ignore-none=yes
 
-# Show a hint with possible names when a member name was not found. The aspect
-# of finding the hint is based on edit distance.
+# Show a hint with possible names when a member name was not found.
+# The aspect of finding the hint is based on edit distance.
 missing-member-hint=yes
 
 # The minimum edit distance a name should have in order to be considered a
@@ -154,14 +152,19 @@ dummy-variables-rgx=_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_
 
 # Argument names that match this expression will be ignored. Default to name
 # with leading underscore.
-ignored-argument-names=_.*|^ignored_|^unused_
+ignored-argument-names=_.*
 
 # Tells whether we should check for unused import in __init__ files.
 init-import=no
 
 # List of qualified module names which can have objects that can redefine
 # builtins.
-redefining-builtins-modules=six.moves,past.builtins,future.builtins,builtins,io
+redefining-builtins-modules=
+    six.moves,
+    past.builtins,
+    future.builtins,
+    builtins,
+    io
 
 
 [FORMAT]
@@ -177,20 +180,13 @@ indent-after-paren=4
 
 # String used as indentation unit. This is usually "    " (4 spaces) or "\t" (1
 # tab).
-indent-string='    '
+indent-string="    "
 
 # Maximum number of characters on a single line.
 max-line-length=120
 
 # Maximum number of lines in a module.
 max-module-lines=1000
-
-# List of optional constructs for which whitespace checking is disabled. `dict-
-# separator` is used to allow tabulation in dicts, etc.: {1  : 1,\n222: 2}.
-# `trailing-comma` allows a space between comma and closing bracket: (a, ).
-# `empty-line` allows space-only lines.
-no-space-check=trailing-comma,
-               dict-separator
 
 # Allow the body of a class to be on the same line as the declaration if body
 # contains single statement.
@@ -225,10 +221,10 @@ argument-naming-style=snake_case
 attr-naming-style=snake_case
 
 # Naming style matching correct class attribute names.
-class-attribute-naming-style=any
+class-attribute-naming-style=UPPER_CASE
 
 # Naming style matching correct class names.
-class-naming-style=any
+class-naming-style=PascalCase
 
 # Naming style matching correct constant names.
 const-naming-style=UPPER_CASE
@@ -240,7 +236,7 @@ function-naming-style=snake_case
 include-naming-hint=no
 
 # Naming style matching correct inline iteration names.
-inlinevar-naming-style=any
+inlinevar-naming-style=snake_case
 
 # Naming style matching correct method names.
 method-naming-style=snake_case
@@ -248,10 +244,12 @@ method-naming-style=snake_case
 # Naming style matching correct module names.
 module-naming-style=snake_case
 
-# List of decorators that produce properties, such as abc.abstractproperty. Add
-# to this list to register other decorators that produce valid properties.
+# List of decorators that produce properties, such as abc.abstractproperty.
+# Add to this list to register other decorators that produce valid properties.
 # These decorators are taken in consideration only for invalid-name.
-property-classes=abc.abstractproperty,property
+property-classes=
+    abc.abstractproperty,
+    property,
 
 # Naming style matching correct variable names.
 variable-naming-style=snake_case
@@ -280,23 +278,25 @@ analyse-fallback-blocks=no
 known-standard-library=
 
 # Force import order to recognize a module as part of a third party library.
-known-third-party=enchant
+known-third-party=
 
 
 [CLASSES]
 
 # List of method names used to declare (i.e. assign) instance attributes.
-defining-attr-methods=__init__,
-                      __new__,
-                      setUp
+defining-attr-methods=
+    __init__,
+    __new__,
+    setUp,
 
 # List of member names, which should be excluded from the protected access
 # warning.
-exclude-protected=_asdict,
-                  _fields,
-                  _replace,
-                  _source,
-                  _make
+exclude-protected=
+    _asdict,
+    _fields,
+    _make,
+    _replace,
+    _source,
 
 # List of valid names for the first argument in a class method.
 valid-classmethod-first-arg=cls
@@ -308,10 +308,10 @@ valid-metaclass-classmethod-first-arg=cls
 [DESIGN]
 
 # Maximum number of arguments for function / method.
-max-args=5
+max-args=10
 
 # Maximum number of attributes for a class (see R0902).
-max-attributes=10
+max-attributes=20
 
 # Maximum number of boolean expressions in an if statement.
 max-bool-expr=5
@@ -328,11 +328,11 @@ max-parents=10
 # Maximum number of public methods for a class (see R0904).
 max-public-methods=20
 
-# Maximum number of public methods for a class (see R0904).
+# Minimum number of public methods for a class (see R0904).
 min-public-methods=0
 
 # Maximum number of return / yield for function / method body.
-max-returns=6
+max-returns=15
 
 # Maximum number of statements in function / method body.
 max-statements=50
